solucionando warnings de pestesting (queda uno)

--- a/gestor-front/angular.json
+++ b/gestor-front/angular.json
@@ -59,6 +59,13 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "host": "0.0.0.0",
+            "allowedHosts": [
+              "host.docker.internal"
+            ],
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "gestor-front:build:production"
