--- a/gestor-front/package.json
+++ b/gestor-front/package.json
@@ -22,6 +22,7 @@
     "apollo-angular": "^5.0.2",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "http-server": "^14.1.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.19.1",
